--- a/engines/ember/package.json
+++ b/engines/ember/package.json
@@ -19,9 +19,9 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "broccoli-asset-rev": "^2.1.2",
     "broccoli-merge-trees": "0.2.1",
     "broccoli-static-compiler": "0.1.4",
-    "broccoli-asset-rev": "^2.1.2",
     "ember-cli": "1.13.8",
     "ember-cli-app-version": "0.5.0",
     "ember-cli-babel": "^5.1.3",
@@ -39,6 +39,7 @@
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "2.0.0",
     "ember-disable-proxy-controllers": "^1.0.0",
-    "ember-export-application-global": "^1.0.3"
+    "ember-export-application-global": "^1.0.3",
+    "ember-simple-auth": "simplabs/ember-simple-auth#jj-abrams"
   }
 }
