--- a/engines/ember/bower.json
+++ b/engines/ember/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "trs-ember",
   "dependencies": {
-    "bootstrap": "~3.3.5",
+    "bootstrap": "~3.3",
     "ember": "2.0.1",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
     "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
@@ -16,6 +16,7 @@
     "pretender": "~0.9.0",
     "lodash": "~3.7.0",
     "Faker": "~3.0.0",
-    "jsoneditor": "4.2.1"
+    "jsoneditor": "4.2.1",
+    "ember-addons.bs_for_ember": "~0.7.0"
   }
 }
