--- a/engines/ember/package.json
+++ b/engines/ember/package.json
@@ -31,7 +31,6 @@
     "ember-cli-htmlbars-inline-precompile": "^0.2.0",
     "ember-cli-ic-ajax": "0.2.1",
     "ember-cli-inject-live-reload": "^1.3.1",
-    "ember-cli-mirage": "0.1.8",
     "ember-cli-qunit": "^1.0.0",
     "ember-cli-release": "0.2.3",
     "ember-cli-sass": "^4.2.0",
@@ -40,6 +39,6 @@
     "ember-data": "2.0.0",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
-    "ember-simple-auth": "simplabs/ember-simple-auth#jj-abrams"
+    "ember-simple-auth": "1.0.1"
   }
 }
