--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ specs:
     - postgres
 
   script:
-    - apt-get install couchdb
+    - apt-get install build-essential erlang-base-hipe erlang-dev erlang-manpages erlang-eunit erlang-nox libicu-dev libmozjs-dev libcurl4-openssl-dev
     - /etc/init.d/couchdb start -b
     - rm -rf config/test.exs
     - cp config/test.exs.gitlab config/test.exs
