--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,8 @@ specs:
     - postgres
 
   script:
+    - add-apt-repository ppa:launchpad/ppa
+    - apt-get update
     - apt-get install build-essential erlang-base-hipe erlang-dev erlang-manpages erlang-eunit erlang-nox libicu-dev libmozjs-dev libcurl4-openssl-dev
     - /etc/init.d/couchdb start -b
     - rm -rf config/test.exs
