--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ specs:
   script:
     - add-apt-repository ppa:launchpad/ppa
     - apt-get update
-    - apt-get install build-essential erlang-base-hipe erlang-dev erlang-manpages erlang-eunit erlang-nox libicu-dev libmozjs185-dev libcurl4-openssl-dev
+    - apt-get install -y build-essential erlang-base-hipe erlang-dev erlang-manpages erlang-eunit erlang-nox libicu-dev libmozjs185-dev libcurl4-openssl-dev
     - /etc/init.d/couchdb start -b
     - rm -rf config/test.exs
     - cp config/test.exs.gitlab config/test.exs
