--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,14 @@ specs:
     - add-apt-repository ppa:launchpad/ppa
     - apt-get update
     - apt-get install -y build-essential erlang-base-hipe erlang-dev erlang-manpages erlang-eunit erlang-nox libicu-dev libmozjs185-dev libcurl4-openssl-dev
-    - /etc/init.d/couchdb start -b
+    - pwd
+    - cd /tmp
+    - git clone git@github.com:apache/couchdb.git
+    - cd couchdb
+    - git checkout 1.6.x
+    - ./configure; make; make install
+    - ls -all
+    - ./bin/couchdb -b
     - rm -rf config/test.exs
     - cp config/test.exs.gitlab config/test.exs
     - mix local.hex --force
