--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ specs:
     - apt-get install -y build-essential erlang-base-hipe erlang-dev erlang-manpages erlang-eunit erlang-nox libicu-dev libmozjs185-dev libcurl4-openssl-dev
     - pwd
     - cd /tmp
-    - git clone git@github.com:apache/couchdb.git
+    - git clone git://github.com/apache/couchdb.git
     - cd couchdb
     - git checkout 1.6.x
     - ./configure; make; make install
