--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ specs:
     - cd couchdb
     - git checkout 1.6.x
     - ls -all
-    - ./configure; make; make install
+    - ./bootstrap; ./configure; make; make install
     - ls -all
     - ./bin/couchdb -b
     - cd /builds/api-hogs/trs
