--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ specs:
   script:
     - add-apt-repository ppa:launchpad/ppa
     - apt-get update
-    - apt-get install -y build-essential erlang-base-hipe erlang-dev erlang-manpages erlang-eunit erlang-nox libicu-dev libmozjs185-dev libcurl4-openssl-dev libtool autotools-dev automake autcoconf-archive
+    - apt-get install -y build-essential erlang-base-hipe erlang-dev erlang-manpages erlang-eunit erlang-nox libicu-dev libmozjs185-dev libcurl4-openssl-dev libtool autotools-dev automake autoconf-archive
     - pwd
     - cd /tmp
     - git clone git://github.com/apache/couchdb.git
