--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,24 +11,12 @@ stages:
 
 specs:
   stage: test
-  image: coders51/elixir-postgres
+  image: deploy/elixir-postgres-couchdb:v1
   services:
     - redis
     - postgres
 
   script:
-    - add-apt-repository ppa:launchpad/ppa
-    - apt-get update
-    - apt-get install -y build-essential erlang-base-hipe erlang-dev erlang-manpages erlang-eunit erlang-nox libicu-dev libmozjs185-dev libcurl4-openssl-dev libtool autotools-dev automake autoconf-archive
-    - pwd
-    - cd /tmp
-    - git clone git://github.com/apache/couchdb.git
-    - cd couchdb
-    - git checkout 1.6.x
-    - ls -all
-    - ./bootstrap; ./configure; make; make install
-    - ls -all
-    - ./bin/couchdb -b
     - cd /builds/api-hogs/trs
     - rm -rf config/test.exs
     - cp config/test.exs.gitlab config/test.exs
